# anaglyph

./: AUTHORS  Makefile.am  README  autogen.sh  cleanup.sh  configure.ac  configure.ac~
cfg/: doxygen.cfg
shaders/: anaglyph.frag
src/: Anaglyph.cpp  Anaglyph.h  Helper.cpp  Helper.h  Makefile.am  TextureLoader.cpp  TextureLoader.h  main.cpp
textures/: gibberlings_l.tif  gibberlings_l_bw.tif  gibberlings_r.tif  gibberlings_r_bw.tif
